--- a/humaya/Css/style.css
+++ b/humaya/Css/style.css
@@ -421,7 +421,6 @@ section .contenedor-indicadores .indicadores button.activo {
 section .contenedor-principal {
   display: flex;
   width: 100%;
-  align-items: center;
   position: relative;
 }
 section .contenedor-principal .flecha-izquierda,
@@ -430,8 +429,9 @@ section .contenedor-principal .flecha-derecha {
   border: none;
   background: rgb(209, 209, 209);
   font-size: 12px;
-  top: calc(50% -25%);
-  height: 8%;
+top: 50%;
+transform: translateY(-50%);
+  height: 40px;
   width: 30px;
   color: rgb(0, 0, 0);
   z-index: 400;
@@ -457,10 +457,9 @@ section .contenedor-principal .container-carrusel {
 }
 section .contenedor-principal .container-carrusel .container-card {
   display: flex;
-  height: 100%;
+ 
   margin: 0 auto 20px auto;
   justify-content: space-between;
-  align-items: center;
   width: 100%;
   flex-wrap: nowrap;
 }
@@ -470,9 +469,46 @@ section .contenedor-principal .container-carrusel .container-card .card {
   padding: 0 20px 0 0;
   height: 100%;
   min-width: 33.333%;
+   overflow: hidden;
+  transition: max-height 0.5s ease-in-out;
   scroll-snap-align: start;
 }
 
+.contenidOculto{
+  display: flex;
+  flex-direction: column;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.5s ease-in-out;
+   flex-grow: 0;
+   width: 95%;
+  padding: 0;
+  margin: 20px auto 0 auto;
+  background:rgb(206, 177, 124) ;
+}
+.contenidOculto h4{
+font-size: 18px;
+text-decoration: underline;
+  text-decoration-color: rgb(88, 63, 25);
+  text-underline-offset: 3px;
+  margin:0 0 10px 0;
+}
+.contenidOculto ul{
+  width: 85%;
+  color: white;
+  margin:0 auto 10px auto;
+}
+.contenidOculto .container-pasos{
+  display: flex;
+  margin-bottom: 10px;
+}
+.contenidOculto .container-pasos span{
+  color: rgb(88, 63, 25);
+}
+.contenidOculto .container-pasos p{
+width: 80% !important;
+margin: 0 0 0 5px;
+}
 main .container-card .card .card-img {
   height: 40vh;
 }
@@ -483,6 +519,7 @@ main .container-card .card .card-img img {
 main .container-card .card .card-info {
   display: flex;
   flex-direction: column;
+  min-height: 204px;
   align-items: center;
   padding: 10px 0;
   background: rgb(206, 177, 124);
@@ -675,9 +712,11 @@ footer > p {
   main .contenedor-principal .container-carrusel .container-card {
     flex-direction: column;
     align-items: center;
+    
   }
   main .container-card .card {
     width: 60%;
+    
     margin: 20px 0;
     min-width: 300px !important;
   }
