--- a/humaya/Css/style.css
+++ b/humaya/Css/style.css
@@ -150,12 +150,12 @@ main .banner article {
 }
 main .banner article .container-img-banner {
   min-width: 50%;
-
   line-height: 0;
 }
 main .banner article .container-img-banner img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 main .banner article .container-gral-banner {
   color: aliceblue;
